--- a/ScreenRecognition.Desktop/View/Pages/HistoryAndTranslatePage.xaml
+++ b/ScreenRecognition.Desktop/View/Pages/HistoryAndTranslatePage.xaml
@@ -11,7 +11,7 @@
       d:DesignWidth="800"
       Title="TranslateHistoryPage">
     <Page.DataContext>
-        <ViewModel:TestHistoryAndTranslatePageViewModel />
+        <ViewModel:HistoryAndTranslatePageViewModel />
     </Page.DataContext>
     <Grid>
         <Grid.ColumnDefinitions>
@@ -36,7 +36,7 @@
                            FontSize="20" />
                 <DockPanel LastChildFill="True">
                     <ListView Margin="5"
-                              ItemsSource="{Binding HistoryList}">
+                              ItemsSource="{Binding HistoryList.Property}">
                         <ListView.ItemTemplate>
                             <DataTemplate>
                                 <Border BorderBrush="#FF4C4949"
